# rp2040-w5500-vscode-project-template

./: README.md
template/: CMakeLists.txt  main.c  utility.c  utility.h
template/libraries/ioLibrary_Driver/: GitHub URL.txt
template/port/ioLibrary_Driver/src/: w5x00_spi.c
